--- a/chunker/pom.xml
+++ b/chunker/pom.xml
@@ -57,52 +57,52 @@
         </dependency>
     </dependencies>
 
-    <!--<build>-->
-        <!--<plugins>-->
-            <!--<plugin>-->
-                <!--<groupId>edu.illinois.cs.cogcomp</groupId>-->
-                <!--<artifactId>lbjava-maven-plugin</artifactId>-->
-                <!--<version>2.1</version>-->
-                <!--<configuration>-->
-                    <!--<lbjavaInputFileList>-->
-                        <!--<param>${project.basedir}/src/main/lbj/chunk.lbj</param>-->
-                    <!--</lbjavaInputFileList>-->
-                    <!--<gspFlag>${project.basedir}/src/main/java</gspFlag>-->
-                    <!--<dFlag>${project.basedir}/target/classes</dFlag>-->
-                    <!--<sourcepathFlag>${project.basedir}/src/main/java</sourcepathFlag>-->
-                <!--</configuration>-->
-                <!--<executions>-->
-                    <!--<execution>-->
-                        <!--<id>compiling</id>-->
-                        <!--<phase>generate-sources</phase>-->
-                        <!--<goals>-->
-                            <!--<goal>clean</goal>-->
-                            <!--<goal>compile</goal>-->
-                        <!--</goals>-->
-                    <!--</execution>-->
-                    <!--<execution>-->
-                        <!--<id>cleaning</id>-->
-                        <!--<phase>pre-clean</phase>-->
-                        <!--<goals>-->
-                        <!--<goal>clean</goal>-->
-                        <!--</goals>-->
-                    <!--</execution>-->
-                <!--</executions>-->
-            <!--</plugin>-->
-        <!--</plugins>-->
-    <!--</build>-->
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>edu.illinois.cs.cogcomp</groupId>
+                <artifactId>lbjava-maven-plugin</artifactId>
+                <version>1.2.26</version>
+                <configuration>
+                    <lbjavaInputFileList>
+                        <param>${project.basedir}/src/main/lbj/chunk.lbj</param>
+                    </lbjavaInputFileList>
+                    <gspFlag>${project.basedir}/src/main/java</gspFlag>
+                    <dFlag>${project.basedir}/target/classes</dFlag>
+                    <sourcepathFlag>${project.basedir}/src/main/java</sourcepathFlag>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>compiling</id>
+                        <phase>generate-sources</phase>
+                        <goals>
+                            <goal>clean</goal>
+                            <goal>compile</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>cleaning</id>
+                        <phase>pre-clean</phase>
+                        <goals>
+                        <goal>clean</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 
-    <!--<pluginRepositories>-->
-        <!--<pluginRepository>-->
-            <!--<id>CogcompSoftware</id>-->
-            <!--<name>CogcompSoftware</name>-->
-            <!--<url>http://cogcomp.cs.illinois.edu/m2repo/</url>-->
-            <!--<releases>-->
-                <!--<enabled>true</enabled>-->
-            <!--</releases>-->
-            <!--<snapshots>-->
-                <!--<enabled>true</enabled>-->
-            <!--</snapshots>-->
-        <!--</pluginRepository>-->
-    <!--</pluginRepositories>-->
+    <pluginRepositories>
+        <pluginRepository>
+            <id>CogcompSoftware</id>
+            <name>CogcompSoftware</name>
+            <url>http://cogcomp.cs.illinois.edu/m2repo/</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </pluginRepository>
+    </pluginRepositories>
 </project>
