train chunker with partial data (explorations)

--- a/chunker/pom.xml
+++ b/chunker/pom.xml
@@ -52,42 +52,68 @@
             <version>1.7.12</version>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>commons-cli</groupId>
+            <artifactId>commons-cli</artifactId>
+            <version>1.3</version>
+        </dependency>
+        <dependency>
+            <groupId>edu.illinois.cs.cogcomp</groupId>
+            <artifactId>illinois-temporal</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>edu.illinois.cs.cogcomp</groupId>
+                    <artifactId>illinois-sl</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>edu.illinois.cs.cogcomp</groupId>
+                    <artifactId>illinois-sl-core</artifactId>
+                </exclusion>
+            </exclusions>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 
     </dependencies>
 
-    <!--<build>-->
-        <!--<plugins>-->
-            <!--<plugin>-->
-                <!--<groupId>edu.illinois.cs.cogcomp</groupId>-->
-                <!--<artifactId>lbjava-maven-plugin</artifactId>-->
-                <!--<version>2.1</version>-->
-                <!--<configuration>-->
-                    <!--<lbjavaInputFileList>-->
-                        <!--<param>${project.basedir}/src/main/lbj/chunk.lbj</param>-->
-                    <!--</lbjavaInputFileList>-->
-                    <!--<gspFlag>${project.basedir}/src/main/java</gspFlag>-->
-                    <!--<dFlag>${project.basedir}/target/classes</dFlag>-->
-                    <!--<sourcepathFlag>${project.basedir}/src/main/java</sourcepathFlag>-->
-                <!--</configuration>-->
-                <!--<executions>-->
-                    <!--<execution>-->
-                        <!--<id>compiling</id>-->
-                        <!--<phase>generate-sources</phase>-->
-                        <!--<goals>-->
-                            <!--<goal>clean</goal>-->
-                            <!--<goal>compile</goal>-->
-                        <!--</goals>-->
-                    <!--</execution>-->
-                    <!--<execution>-->
-                        <!--<id>cleaning</id>-->
-                        <!--<phase>pre-clean</phase>-->
-                        <!--<goals>-->
-                        <!--<goal>clean</goal>-->
-                        <!--</goals>-->
-                    <!--</execution>-->
-                <!--</executions>-->
-            <!--</plugin>-->
-        <!--</plugins>-->
-    <!--</build>-->
-
+    <!--<build>
+        <plugins>
+            <plugin>
+                <groupId>edu.illinois.cs.cogcomp</groupId>
+                <artifactId>lbjava-maven-plugin</artifactId>
+                <version>1.3.1</version>
+                <configuration>
+                    <lbjavaInputFileList>
+                        <param>${project.basedir}/src/main/lbj/chunk_partial.lbj</param>
+                    </lbjavaInputFileList>
+                    <gspFlag>${project.basedir}/src/main/java</gspFlag>
+                    <dFlag>${project.basedir}/target/classes</dFlag>
+                    <sourcepathFlag>${project.basedir}/src/main/java</sourcepathFlag>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>compiling</id>
+                        <phase>generate-sources</phase>
+                        <goals>
+                            <goal>clean</goal>
+                            <goal>compile</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>cleaning</id>
+                        <phase>pre-clean</phase>
+                        <goals>
+                        <goal>clean</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>-->
+    <pluginRepositories>
+        <pluginRepository>
+            <id>CogcompSoftware</id>
+            <name>CogcompSoftware</name>
+            <url>http://cogcomp.cs.illinois.edu/m2repo/</url>
+        </pluginRepository>
+    </pluginRepositories>
 </project>
